--- a/UgTilesMenuDemo2/Sources/UgTilesMenuDemo2/main.page
+++ b/UgTilesMenuDemo2/Sources/UgTilesMenuDemo2/main.page
@@ -13,8 +13,8 @@
           <font xsi:type="graphics:Font" fontFamily="Arial" size="13">
             <color xsi:type="graphics:RGB" Red="252" Green="252" Blue="252"/>
           </font>
-          <location xsi:type="graphics:Point" x="5" y="85"/>
-          <size xsi:type="graphics:Dimension" width="88" height="22"/>
+          <location xsi:type="graphics:Point" x="5" y="82"/>
+          <size xsi:type="graphics:Dimension" width="82" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
           <layoutData xsi:type="layout:GridData" row="1" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
             <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
@@ -24,7 +24,7 @@
         </children>
         <children xsi:type="widgets:Image" url="Assets/flights.svg" contentPriority="false" name="image1">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="88" height="80"/>
+          <size xsi:type="graphics:Dimension" width="82" height="77"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="77" height="72"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -32,18 +32,18 @@
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="98" height="112"/>
+        <size xsi:type="graphics:Dimension" width="92" height="109"/>
         <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT" grabVerticalSpace="true">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
       <children xsi:type="widgets:ListView" name="listView2">
         <minArea xsi:type="graphics:Dimension"/>
-        <location xsi:type="graphics:Point" x="103" y="5"/>
+        <location xsi:type="graphics:Point" x="102" y="5"/>
         <backgroundColor xsi:type="graphics:RGB" Red="6" Green="255" Blue="107"/>
         <children xsi:type="widgets:Image" url="Assets/restaurant_White.svg" contentPriority="false" name="image2">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="86" height="80"/>
+          <size xsi:type="graphics:Dimension" width="81" height="78"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="70" height="78"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -57,24 +57,24 @@
             <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
           </layoutData>
-          <location xsi:type="graphics:Point" x="5" y="85"/>
-          <size xsi:type="graphics:Dimension" width="86" height="22"/>
+          <location xsi:type="graphics:Point" x="5" y="83"/>
+          <size xsi:type="graphics:Dimension" width="81" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="96" height="112"/>
+        <size xsi:type="graphics:Dimension" width="91" height="109"/>
         <layoutData xsi:type="layout:GridData" column="1" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
       <children xsi:type="widgets:ListView" name="listView3">
         <minArea xsi:type="graphics:Dimension"/>
-        <location xsi:type="graphics:Point" x="199" y="5"/>
+        <location xsi:type="graphics:Point" x="198" y="5"/>
         <backgroundColor xsi:type="graphics:RGB" Red="255" Green="174" Blue="52"/>
         <children xsi:type="widgets:Image" url="Assets/shopping.svg" contentPriority="false" name="image3">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="86" height="80"/>
+          <size xsi:type="graphics:Dimension" width="82" height="77"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="82" height="73"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -88,24 +88,24 @@
             <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
           </layoutData>
-          <location xsi:type="graphics:Point" x="5" y="85"/>
-          <size xsi:type="graphics:Dimension" width="86" height="22"/>
+          <location xsi:type="graphics:Point" x="5" y="82"/>
+          <size xsi:type="graphics:Dimension" width="82" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="96" height="112"/>
+        <size xsi:type="graphics:Dimension" width="92" height="109"/>
         <layoutData xsi:type="layout:GridData" column="2" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
       <children xsi:type="widgets:ListView" name="listView4">
         <minArea xsi:type="graphics:Dimension"/>
-        <location xsi:type="graphics:Point" x="5" y="117"/>
+        <location xsi:type="graphics:Point" x="5" y="119"/>
         <backgroundColor xsi:type="graphics:RGB" Red="42" Green="32" Blue="255"/>
         <children xsi:type="widgets:Image" url="Assets/movies.svg" contentPriority="false" name="image4">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="88" height="84"/>
+          <size xsi:type="graphics:Dimension" width="82" height="83"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="66" height="69"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -119,24 +119,24 @@
             <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
           </layoutData>
-          <location xsi:type="graphics:Point" x="5" y="89"/>
-          <size xsi:type="graphics:Dimension" width="88" height="22"/>
+          <location xsi:type="graphics:Point" x="5" y="88"/>
+          <size xsi:type="graphics:Dimension" width="82" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="98" height="116"/>
+        <size xsi:type="graphics:Dimension" width="92" height="115"/>
         <layoutData xsi:type="layout:GridData" row="1" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true" widthConstraint="MATCH_PARENT">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
       <children xsi:type="widgets:ListView" name="listView5">
         <minArea xsi:type="graphics:Dimension"/>
-        <location xsi:type="graphics:Point" x="103" y="117"/>
+        <location xsi:type="graphics:Point" x="102" y="119"/>
         <backgroundColor xsi:type="graphics:RGB" Red="151" Green="134" Blue="255"/>
         <children xsi:type="widgets:Image" url="Assets/hotel.svg" contentPriority="false" name="image5">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="86" height="84"/>
+          <size xsi:type="graphics:Dimension" width="81" height="84"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="78" height="84"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -151,23 +151,23 @@
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
           </layoutData>
           <location xsi:type="graphics:Point" x="5" y="89"/>
-          <size xsi:type="graphics:Dimension" width="86" height="22"/>
+          <size xsi:type="graphics:Dimension" width="81" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="96" height="116"/>
+        <size xsi:type="graphics:Dimension" width="91" height="115"/>
         <layoutData xsi:type="layout:GridData" column="1" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" row="1" grabVerticalSpace="true" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
       <children xsi:type="widgets:ListView" name="listView6">
         <minArea xsi:type="graphics:Dimension"/>
-        <location xsi:type="graphics:Point" x="199" y="117"/>
+        <location xsi:type="graphics:Point" x="198" y="119"/>
         <backgroundColor xsi:type="graphics:RGB" Red="239" Green="114" Blue="255"/>
         <children xsi:type="widgets:Image" url="Assets/medicin.svg" contentPriority="false" name="image6">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="86" height="84"/>
+          <size xsi:type="graphics:Dimension" width="82" height="83"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="74" height="73"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -181,24 +181,24 @@
             <minSize xsi:type="graphics:Dimension" width="57" height="22"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
           </layoutData>
-          <location xsi:type="graphics:Point" x="5" y="89"/>
-          <size xsi:type="graphics:Dimension" width="86" height="22"/>
+          <location xsi:type="graphics:Point" x="5" y="88"/>
+          <size xsi:type="graphics:Dimension" width="82" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="67" height="22"/>
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="96" height="116"/>
+        <size xsi:type="graphics:Dimension" width="92" height="115"/>
         <layoutData xsi:type="layout:GridData" column="2" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" row="1" grabVerticalSpace="true" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
       <children xsi:type="widgets:ListView" name="listView7">
         <minArea xsi:type="graphics:Dimension"/>
-        <location xsi:type="graphics:Point" x="5" y="233"/>
+        <location xsi:type="graphics:Point" x="5" y="239"/>
         <backgroundColor xsi:type="graphics:RGB" Red="255" Green="34" Blue="25"/>
         <children xsi:type="widgets:Image" url="Assets/money.svg" contentPriority="false" name="image7">
           <location xsi:type="graphics:Point" x="5" y="5"/>
-          <size xsi:type="graphics:Dimension" width="88" height="80"/>
+          <size xsi:type="graphics:Dimension" width="82" height="70"/>
           <layoutData xsi:type="layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" widthConstraint="MATCH_PARENT" grabVerticalSpace="true" grabHorizontalSpace="true">
             <minSize xsi:type="graphics:Dimension" width="63" height="70"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
@@ -212,18 +212,18 @@
             <minSize xsi:type="graphics:Dimension" width="44" height="22"/>
             <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
           </layoutData>
-          <location xsi:type="graphics:Point" x="5" y="85"/>
-          <size xsi:type="graphics:Dimension" width="88" height="22"/>
+          <location xsi:type="graphics:Point" x="5" y="75"/>
+          <size xsi:type="graphics:Dimension" width="82" height="22"/>
           <contentSize xsi:type="graphics:Dimension" width="44" height="22"/>
         </children>
         <layout xsi:type="layout:GridLayout" rows="2" marginTop="5" marginBottom="5" marginLeft="5" marginRight="5"/>
         <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
-        <size xsi:type="graphics:Dimension" width="98" height="112"/>
+        <size xsi:type="graphics:Dimension" width="92" height="101"/>
         <layoutData xsi:type="layout:GridData" row="2" verticalAlignment="MIDDLE" heightConstraint="MATCH_PARENT" grabHorizontalSpace="true" grabVerticalSpace="true" widthConstraint="MATCH_PARENT">
           <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
         </layoutData>
       </children>
-      <layout xsi:type="layout:GridLayout" rows="4" marginTop="5" columns="4" marginBottom="5" marginLeft="5" marginRight="5"/>
+      <layout xsi:type="layout:GridLayout" rows="4" verticalSpacing="5" horizontalSpacing="5" marginTop="5" columns="4" marginBottom="5" marginLeft="5" marginRight="5"/>
       <maxArea xsi:type="graphics:Dimension" width="-1" height="-1"/>
       <location xsi:type="graphics:Point" y="30"/>
       <minArea xsi:type="graphics:Dimension"/>
