--- a/UgProgrammaticUIDev/Sources/UgProgrammaticUIDev/DynamicButtonGrid.page
+++ b/UgProgrammaticUIDev/Sources/UgProgrammaticUIDev/DynamicButtonGrid.page
@@ -1,20 +1,19 @@
-<?xml  version="1.0" encoding="UTF-8" standalone="no"?>
-<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmi:version="2.0" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets">
-  <widgets:Page name="DynamicButtonGrid">
-    <children xsi:type="widgets:CustomWidget" name="customwidget1">
-      <location xsi:type="graphics:Point"/>
-      <size xsi:type="graphics:Dimension" width="300" height="300"/>
-      <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE">
-        <minSize xsi:type="graphics:Dimension" width="300" height="300"/>
-        <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
-      </layoutData>
-    </children>
-    <layout xsi:type="layout:GridLayout" columns="2" rows="2"/>
-    <maxArea xsi:type="graphics:Dimension" width="414" height="896"/>
-    <location xsi:type="graphics:Point"/>
-    <minArea xsi:type="graphics:Dimension" width="414" height="896"/>
-    <size xsi:type="graphics:Dimension" width="414" height="896"/>
-  </widgets:Page>
-  <binding:BindingModel/>
-  <navigation:Navigation page="/0"/>
+<?xml version="1.0" encoding="UTF-8"?>
+<xmi:XMI xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:binding="http://scade.com/sdk/data/binding" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:graphics="http://scade.com/sdk/view/graphics" xmlns:layout="http://scade.com/sdk/layout" xmlns:navigation="http://scade.com/lattice/navigation" xmlns:widgets="http://scade.com/sdk/view/widgets" xmi:version="2.0" xmi:id="0.3">
+    <widgets:Page name="DynamicButtonGrid">
+        <children xsi:type="widgets:CustomWidget" name="customwidget1">
+            <location xsi:type="graphics:Point"/>
+            <size xsi:type="graphics:Dimension" width="300" height="300"/>
+            <layoutData xsi:type="layout:GridData" verticalAlignment="MIDDLE">
+                <minSize xsi:type="graphics:Dimension" width="300" height="300"/>
+                <maxSize xsi:type="graphics:Dimension" width="-1" height="-1"/>
+            </layoutData>
+        </children>
+        <layout xsi:type="layout:GridLayout" columns="2" rows="2"/>
+        <maxArea xsi:type="graphics:Dimension" width="414" height="896"/>
+        <location xsi:type="graphics:Point"/>
+        <minArea xsi:type="graphics:Dimension" width="414" height="896"/>
+        <size xsi:type="graphics:Dimension" width="414" height="896"/>
+    </widgets:Page>
+    <navigation:Navigation page="/0"/>
 </xmi:XMI>
